automatically build usvfs itself

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "node bindings for usvfs",
   "main": "index.js",
   "scripts": {
-    "install": "autogypi && node-gyp configure build"
+    "build_usvfs": "node build_usvfs.js",
+    "install": "autogypi && npm run build_usvfs && node-gyp configure build"
   },
   "author": "Sebastian Herbord",
   "license": "GPL-3.0",
   "dependencies": {
     "autogypi": "^0.2.2",
+    "msbuild": "^1.0.2",
     "nan": "^2.11.0",
     "node-gyp": "^3.8.0"
   }
