--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-usvfs",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "node bindings for usvfs",
   "main": "index.js",
   "scripts": {
@@ -12,8 +12,8 @@
   "license": "GPL-3.0",
   "dependencies": {
     "autogypi": "^0.2.2",
-    "msbuild": "^1.1.2",
-    "nan": "^2.11.0",
-    "node-gyp": "^4.0.0"
+    "msbuild": "1.1.2",
+    "nan": "^2.14.0",
+    "node-gyp": "^6.1.0"
   }
 }
